Fix broken scrollbar

--- a/static/less/code.less
+++ b/static/less/code.less
@@ -21,6 +21,9 @@ td.code {
 	text-align: right;
 	width: 50%;
 }
+.code-wrap {
+	overflow: scroll;
+}
 table.code {
 	background: @blue-gray-dark;
 	color: #fff;
@@ -52,7 +55,6 @@ table.code {
 		padding-right: 10px;
 		line-height: 20px;
 		white-space: pre;
-		overflow: visible;
 		word-wrap: normal;
 	}
 
